[project]
name = "pytools"
version = "0.0.1"
authors = [{ name = "sunclx", email = "sunclx@gmail.com" }]
description = "个人使用的python工具库"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sunclx/pytools"
Issues = "https://github.com/sunclx/pytools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
